--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.2.7
 djangorestframework==3.14.0
+setuptools>=65.0.0
 django-cors-headers==4.3.1
 djangorestframework-simplejwt==5.3.0
 django-filter==23.3
